promo material page updates

--- a/partners.html
+++ b/partners.html
@@ -49,7 +49,7 @@
       <a href="https://stagedoorapp.com/podcast" title="Ad Lib Podcast">Podcast</a>
       <a href="https://itunes.apple.com/us/app/stagedoor-london-theatre-app/id963068912?ls=1&mt=8" id="appstore-link" title="Download iOS app">Download <span class="hide-on-mobile"> app</span></a>
       <!-- <a href="http://stagedoorapp.com/camdenfringe" title="Official app of The Camden Fringe" class="hide-on-mobile  camden-fringe-colour">#CamdenFringe</a> -->
-      <a href="http://stagedoorapp.com/vaultfestival" title="VAULT Festival" class="hide-on-mobile  vault-festival-colour">#VAULTFestival</a>
+      <!-- <a href="http://stagedoorapp.com/vaultfestival" title="VAULT Festival" class="hide-on-mobile  vault-festival-colour">#VAULTFestival</a> -->
     </nav>
 
     <section class="show-on-mobile">
