--- a/promo.html
+++ b/promo.html
@@ -52,7 +52,7 @@
       <h1 class="h1--giga">Promotional material</h1>
       <h2>Use the assets below to promote your Stagedoor profile.</h2>
 
-      <section class="padding--top-four-spaces">
+      <section class="padding--top-six-spaces">
         <h2 class="h2--giga  text--yellow" id="banners">1. Banners</h2>
         <div class="padding--top-two-spaces  center-on-mobile">
           <h2 id="email" class="text--strong">Email</h2>
@@ -92,46 +92,85 @@
         </div>
       </section>
 
-      <section class="padding--top-four-spaces">
+      <section class="padding--top-six-spaces">
         <div>
           <h2 class="h2--giga  text--yellow" id="stickers">2. Stickers</h2>
           <div class="margin--right-one-space  margin--bottom-one-space  display--inline-block  border--1px  border--opacity-35"><img src="images/promo/sticker/sticker-stagedoor.jpg" alt="sticker stagedoor" width="1040px"/></div>
-          <small class="text--light-grey  text--strong"><a href="mailto:hi@stagedoorapp.com">Contact us</a> if you wish to receive Stagedoor stickers (more colours available).</small>
+          <div>
+            <div class="margin--right-one-space  margin--bottom-one-space  display--inline-block  border--1px  border--opacity-35  background--light-grey-10"><img src="images/promo/sticker/review-sticker-stagedoor-black.png" alt="sticker stagedoor black" width="320px"/></div>
+            <div class="margin--right-one-space  margin--bottom-one-space  display--inline-block  border--1px  border--opacity-35  background--light-grey-10"><img src="images/promo/sticker/review-sticker-stagedoor-red.png" alt="sticker stagedoor red" width="320px"/></div>
+            <div class="margin--right-one-space  margin--bottom-one-space  display--inline-block  border--1px  border--opacity-35  background--light-grey-10"><img src="images/promo/sticker/review-sticker-stagedoor-white.png" alt="sticker stagedoor white" width="320px"/></div>
+          </div>
+          <small class="text--light-grey  text--strong"><a href="mailto:hi@stagedoorapp.com">Contact us</a> if you wish to receive Stagedoor stickers (specify the colour you wish).</small>
         </div>
       </section>
 
-      <section class="padding--top-four-spaces">
+      <section class="padding--top-six-spaces">
         <div>
           <h2 class="h2--giga  text--yellow" id="business-cards">3. Business Cards</h2>
-          <div class="margin--right-one-space  margin--bottom-one-space  display--inline-block  border--1px  border--opacity-35"><img src="images/promo/business-card/business-card-stagedoor.jpg" alt="business-card stagedoor" width="1040px"/></div>
-          <small class="text--light-grey  text--strong"><a href="mailto:hi@stagedoorapp.com">Contact us</a> if you wish to receive Stagedoor business cards (more colours available).</small>
+          <div class="margin--right-one-space  margin--bottom-one-space  display--inline-block  border--1px  border--opacity-35"><img src="images/promo/business-card/business-card-stagedoor.jpg" alt="business-card product stagedoor" width="1040px"/></div>
+          <div>
+            <div class="margin--right-one-space  margin--bottom-one-space  display--inline-block  border--1px  border--opacity-35"><img src="images/promo/business-card/review-business-card-stagedoor-black.png" alt="business-card stagedoor black" width="320px"/></div>
+            <div class="margin--right-one-space  margin--bottom-one-space  display--inline-block  border--1px  border--opacity-35"><img src="images/promo/business-card/review-business-card-stagedoor-red.png" alt="business-card stagedoor red" width="320px"/></div>
+            <div class="margin--right-one-space  margin--bottom-one-space  display--inline-block  border--1px  border--opacity-35"><img src="images/promo/business-card/review-business-card-stagedoor-white.png" alt="business-card stagedoor white" width="320px"/></div>
+          </div>
+          <small class="text--light-grey  text--strong"><a href="mailto:hi@stagedoorapp.com">Contact us</a> if you wish to receive Stagedoor business cards (specify the colour you wish).</small>
         </div>
       </section>
 
-      <section class="padding--top-four-spaces">
+      <section class="padding--top-six-spaces">
         <div>
           <h2 class="h2--giga  text--yellow" id="coasters">4. Coasters</h2>
-          <div class="margin--right-one-space  margin--bottom-one-space  display--inline-block  border--1px  border--opacity-35"><img src="images/promo/coaster/coaster-stagedoor.jpg" alt="coaster stagedoor" width="1040px"/></div>
-          <small class="text--light-grey  text--strong"><a href="mailto:hi@stagedoorapp.com">Contact us</a> if you wish to receive Stagedoor coasters (more colours available).</small>
+          <div class="margin--right-one-space  margin--bottom-one-space  display--inline-block  border--1px  border--opacity-35"><img src="images/promo/coaster/coaster-stagedoor.jpg" alt="coaster product stagedoor" width="1040px"/></div>
+          <div>
+            <div class="margin--right-one-space  margin--bottom-one-space  display--inline-block  border--1px  border--opacity-35"><img src="images/promo/coaster/review-coaster-stagedoor-black.png" alt="coaster stagedoor black" width="320px"/></div>
+            <div class="margin--right-one-space  margin--bottom-one-space  display--inline-block  border--1px  border--opacity-35"><img src="images/promo/coaster/review-coaster-stagedoor-red.png" alt="coaster stagedoor red" width="320px"/></div>
+            <div class="margin--right-one-space  margin--bottom-one-space  display--inline-block  border--1px  border--opacity-35"><img src="images/promo/coaster/review-coaster-stagedoor-white.png" alt="coaster stagedoor white" width="320px"/></div>
+          </div>
+          <small class="text--light-grey  text--strong"><a href="mailto:hi@stagedoorapp.com">Contact us</a> if you wish to receive Stagedoor coasters (specify the colour you wish).</small>
         </div>
       </section>
 
-      <section class="padding--top-four-spaces">
-        <div>
+      <section class="padding--top-six-spaces">
+        <div class="center-on-mobile">
           <h2 class="h2--giga  text--yellow" id="table-talkers">5. Table talkers</h2>
           <div class="margin--right-one-space  margin--bottom-one-space  display--inline-block  border--1px  border--opacity-35"><img src="images/promo/table-talker/table-talker-stagedoor.jpg" alt="table-talker stagedoor" width="1040px"/></div>
-          <small class="text--light-grey  text--strong"><a href="mailto:hi@stagedoorapp.com">Contact us</a> if you wish to receive Stagedoor table-talkers (more colours available).</small>
+          <small class="text--light-grey  text--strong"><a href="mailto:hi@stagedoorapp.com">Contact us</a> if you wish to receive Stagedoor table-talkers (specify the colour you wish).</small>
         </div>
       </section>
 
-      <section class="padding--top-four-spaces">
-        <h2 class="h2--giga  text--yellow" id="posters">6. Posters</h2>
-        <p>Coming soon.</p>
+      <section class="padding--top-six-spaces">
+        <div class="center-on-mobile">
+          <h2 class="h2--giga  text--yellow" id="posters">6. Posters</h2>
+          <div class="padding--top-half-space">
+            <div class="margin--right-one-space  margin--bottom-one-space  display--inline-block  border--1px  border--opacity-35"><img src="images/promo/poster/review-poster-stagedoor-black.png" alt="poster stagedoor black" width="320px"/></div>
+            <div class="margin--right-one-space  margin--bottom-one-space  display--inline-block  border--1px  border--opacity-35"><img src="images/promo/poster/review-poster-stagedoor-red.png" alt="poster stagedoor red" width="320px"/></div>
+            <div class="margin--right-one-space  margin--bottom-one-space  display--inline-block  border--1px  border--opacity-35"><img src="images/promo/poster/review-poster-stagedoor-white.png" alt="poster stagedoor white" width="320px"/></div>
+          </div>
+          <small class="text--light-grey  text--strong"><a href="mailto:hi@stagedoorapp.com">Contact us</a> if you wish to receive Stagedoor posters.</small>
+        </div>
       </section>
 
-      <section class="padding--top-four-spaces">
-        <h2 class="h2--giga  text--yellow" id="logo">7. Logo</h2>
-        <p>Coming soon.</p>
+      <section class="padding--top-six-spaces">
+        <div class="center-on-mobile">
+          <h2 class="h2--giga  text--yellow" id="logo">7. Logo</h2>
+          <div class="padding--top-half-space  less-opacity-on-hover">
+            <a href="images/promo/logo/logo-stagedoor-hori-red-med.png" class="margin--right-one-space  margin--bottom-one-space  display--inline-block  border--1px  border--opacity-35" download><img src="images/promo/logo/logo-stagedoor-hori-red-med.png" alt="stagedoor logo red" width="230px"/></a>
+            <a href="images/promo/logo/logo-stagedoor-hori-white-med.png" class="margin--right-one-space  margin--bottom-one-space  display--inline-block  border--1px  border--opacity-35" download><img src="images/promo/logo/logo-stagedoor-hori-white-med.png" alt="stagedoor logo white" width="230px"/></a>
+            <a href="images/promo/logo/logo-stagedoor-hori-redblack-med.png" class="margin--right-one-space  margin--bottom-one-space  display--inline-block  border--1px  border--opacity-35  background--light-grey-10" download><img src="images/promo/logo/logo-stagedoor-hori-redblack-med.png" alt="stagedoor logo redblack" width="230px"/></a>
+            <a href="images/promo/logo/logo-stagedoor-hori-black-med.png" class="margin--right-one-space  margin--bottom-one-space  display--inline-block  border--1px  border--opacity-35  background--light-grey-10" download><img src="images/promo/logo/logo-stagedoor-hori-black-med.png" alt="stagedoor logo black" width="230px"/></a>
+
+            <a href="images/promo/logo/logo-stagedoor-vert-red-med.png" class="margin--right-one-space  margin--bottom-one-space  display--inline-block  border--1px  border--opacity-35" download><img src="images/promo/logo/logo-stagedoor-vert-red-med.png" alt="stagedoor logo red" width="230px"/></a>
+            <a href="images/promo/logo/logo-stagedoor-vert-white-med.png" class="margin--right-one-space  margin--bottom-one-space  display--inline-block  border--1px  border--opacity-35" download><img src="images/promo/logo/logo-stagedoor-vert-white-med.png" alt="stagedoor logo white" width="230px"/></a>
+            <a href="images/promo/logo/logo-stagedoor-vert-redblack-med.png" class="margin--right-one-space  margin--bottom-one-space  display--inline-block  border--1px  border--opacity-35  background--light-grey-10" download><img src="images/promo/logo/logo-stagedoor-vert-redblack-med.png" alt="stagedoor logo redblack" width="230px"/></a>
+            <a href="images/promo/logo/logo-stagedoor-vert-black-med.png" class="margin--right-one-space  margin--bottom-one-space  display--inline-block  border--1px  border--opacity-35  background--light-grey-10" download><img src="images/promo/logo/logo-stagedoor-vert-black-med.png" alt="stagedoor logo black" width="230px"/></a>
+
+            <a href="images/promo/logo/logo-stagedoor-notext-red-med.png" class="margin--right-one-space  margin--bottom-one-space  display--inline-block  border--1px  border--opacity-35" download><img src="images/promo/logo/logo-stagedoor-notext-red-med.png" alt="stagedoor logo red" width="230px"/></a>
+            <a href="images/promo/logo/logo-stagedoor-notext-white-med.png" class="margin--right-one-space  margin--bottom-one-space  display--inline-block  border--1px  border--opacity-35" download><img src="images/promo/logo/logo-stagedoor-notext-white-med.png" alt="stagedoor logo white" width="230px"/></a>
+            <a href="images/promo/logo/logo-stagedoor-notext-black-med.png" class="margin--right-one-space  margin--bottom-one-space  display--inline-block  border--1px  border--opacity-35  background--light-grey-10" download><img src="images/promo/logo/logo-stagedoor-notext-black-med.png" alt="stagedoor logo black" width="230px"/></a>
+          </div>
+          <small class="text--light-grey  text--strong">Click on the desired image to download full size (various sizes PNG, RGB).</small>
+        </div>
       </section>
     </div>
 
