promo page updated

--- a/promo.html
+++ b/promo.html
@@ -32,7 +32,7 @@
 </head>
 <body>
   <!-- Google Tag Manager -->
-  <noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-MQWRJJ"
+  <!--noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-MQWRJJ"
   height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
   new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
@@ -53,7 +53,68 @@
       <h2>Use the assets below to promote your Stagedoor profile.</h2>
 
       <section class="padding--top-six-spaces">
-        <h2 class="h2--giga  text--yellow" id="banners">1. Banners</h2>
+        <div>
+          <h2 class="h2--giga  text--yellow" id="coasters">1. Coasters</h2>
+          <div class="margin--right-one-space  margin--bottom-one-space  display--inline-block  border--1px  border--opacity-35"><img src="images/promo/coaster/coaster-stagedoor.jpg" alt="coaster product stagedoor" width="1040"/></div>
+          <div>
+            <div class="margin--right-one-space  margin--bottom-one-space  display--inline-block  border--1px  border--opacity-35"><img src="images/promo/coaster/review-coaster-stagedoor-black.png" alt="coaster stagedoor black" width="320"/></div>
+            <div class="margin--right-one-space  margin--bottom-one-space  display--inline-block  border--1px  border--opacity-35"><img src="images/promo/coaster/review-coaster-stagedoor-red.png" alt="coaster stagedoor red" width="320"/></div>
+            <div class="margin--right-one-space  margin--bottom-one-space  display--inline-block  border--1px  border--opacity-35"><img src="images/promo/coaster/review-coaster-stagedoor-white.png" alt="coaster stagedoor white" width="320"/></div>
+          </div>
+          <small class="text--light-grey  text--strong"><a href="mailto:hi@stagedoorapp.com">Contact us</a> if you wish to receive Stagedoor coasters (specify the colour you wish).</small>
+        </div>
+      </section>
+
+      <section class="padding--top-six-spaces">
+        <div>
+          <h2 class="h2--giga  text--yellow" id="stickers">2. Stickers</h2>
+          <div class="margin--right-one-space  margin--bottom-one-space  display--inline-block  border--1px  border--opacity-35"><img src="images/promo/sticker/sticker-stagedoor.jpg" alt="sticker stagedoor" width="1040"/></div>
+          <div>
+            <div class="margin--right-one-space  margin--bottom-one-space  display--inline-block  border--1px  border--opacity-35  background--light-grey-10"><img src="images/promo/sticker/review-sticker-stagedoor-black.png" alt="sticker stagedoor black" width="320"/></div>
+            <div class="margin--right-one-space  margin--bottom-one-space  display--inline-block  border--1px  border--opacity-35  background--light-grey-10"><img src="images/promo/sticker/review-sticker-stagedoor-red.png" alt="sticker stagedoor red" width="320"/></div>
+            <div class="margin--right-one-space  margin--bottom-one-space  display--inline-block  border--1px  border--opacity-35  background--light-grey-10"><img src="images/promo/sticker/review-sticker-stagedoor-white.png" alt="sticker stagedoor white" width="320"/></div>
+          </div>
+          <small class="text--light-grey  text--strong"><a href="mailto:hi@stagedoorapp.com">Contact us</a> if you wish to receive Stagedoor stickers (specify the colour you wish).</small>
+        </div>
+      </section>
+
+      <section class="padding--top-six-spaces">
+        <div>
+          <h2 class="h2--giga  text--yellow" id="business-cards">3. Business Cards</h2>
+          <div class="margin--right-one-space  margin--bottom-one-space  display--inline-block  border--1px  border--opacity-35"><img src="images/promo/business-card/business-card-stagedoor.jpg" alt="business-card product stagedoor" width="1040"/></div>
+          <div>
+            <div class="margin--right-one-space  margin--bottom-one-space  display--inline-block  border--1px  border--opacity-35"><img src="images/promo/business-card/review-business-card-stagedoor-black.png" alt="business-card stagedoor black" width="320"/></div>
+            <div class="margin--right-one-space  margin--bottom-one-space  display--inline-block  border--1px  border--opacity-35"><img src="images/promo/business-card/review-business-card-stagedoor-red.png" alt="business-card stagedoor red" width="320"/></div>
+            <div class="margin--right-one-space  margin--bottom-one-space  display--inline-block  border--1px  border--opacity-35"><img src="images/promo/business-card/review-business-card-stagedoor-white.png" alt="business-card stagedoor white" width="320"/></div>
+          </div>
+          <small class="text--light-grey  text--strong"><a href="mailto:hi@stagedoorapp.com">Contact us</a> if you wish to receive Stagedoor business cards (specify the colour you wish).</small>
+        </div>
+      </section>
+
+      <section class="padding--top-six-spaces">
+        <div class="center-on-mobile">
+          <h2 class="h2--giga  text--yellow" id="posters">4. Posters</h2>
+          <div class="margin--right-one-space  margin--bottom-one-space  display--inline-block  border--1px  border--opacity-35"><img src="images/promo/poster/poster-stagedoor.jpg" alt="poster product stagedoor" width="1040"/></div>
+          <div>
+          <div class="padding--top-half-space">
+            <div class="margin--right-one-space  margin--bottom-one-space  display--inline-block  border--1px  border--opacity-35"><img src="images/promo/poster/review-poster-stagedoor-black.png" alt="poster stagedoor black" width="320"/></div>
+            <div class="margin--right-one-space  margin--bottom-one-space  display--inline-block  border--1px  border--opacity-35"><img src="images/promo/poster/review-poster-stagedoor-red.png" alt="poster stagedoor red" width="320"/></div>
+            <div class="margin--right-one-space  margin--bottom-one-space  display--inline-block  border--1px  border--opacity-35"><img src="images/promo/poster/review-poster-stagedoor-white.png" alt="poster stagedoor white" width="320"/></div>
+          </div>
+          <small class="text--light-grey  text--strong"><a href="mailto:hi@stagedoorapp.com">Contact us</a> if you wish to receive Stagedoor posters.</small>
+        </div>
+      </section>
+
+      <section class="padding--top-six-spaces">
+        <div class="center-on-mobile">
+          <h2 class="h2--giga  text--yellow" id="table-talkers">5. Table talkers</h2>
+          <div class="margin--right-one-space  margin--bottom-one-space  display--inline-block  border--1px  border--opacity-35"><img src="images/promo/table-talker/table-talker-stagedoor.jpg" alt="table-talker stagedoor" width="1040"/></div>
+          <small class="text--light-grey  text--strong"><a href="mailto:hi@stagedoorapp.com">Contact us</a> if you wish to receive Stagedoor table-talkers (specify the colour you wish).</small>
+        </div>
+      </section>
+
+      <section class="padding--top-six-spaces">
+        <h2 class="h2--giga  text--yellow" id="banners">6. Banners</h2>
         <div class="padding--top-two-spaces  center-on-mobile">
           <h2 id="email" class="text--strong">Email</h2>
           <div class="padding--top-half-space  less-opacity-on-hover">
@@ -89,65 +150,6 @@
             <a href="images/promo/banner/review-instagram-stagedoor-white.png" class="margin--right-one-space  margin--bottom-one-space  display--inline-block  border--1px  border--opacity-35" download><img src="images/promo/banner/review-instagram-stagedoor-white.png" alt="facebook banner stagedoor white" width="320"/></a>
           </div>
           <small class="text--light-grey  text--strong">Click on the desired image to download full size (1080&times;1080px PNG, RGB).</small>
-        </div>
-      </section>
-
-      <section class="padding--top-six-spaces">
-        <div>
-          <h2 class="h2--giga  text--yellow" id="stickers">2. Stickers</h2>
-          <div class="margin--right-one-space  margin--bottom-one-space  display--inline-block  border--1px  border--opacity-35"><img src="images/promo/sticker/sticker-stagedoor.jpg" alt="sticker stagedoor" width="1040"/></div>
-          <div>
-            <div class="margin--right-one-space  margin--bottom-one-space  display--inline-block  border--1px  border--opacity-35  background--light-grey-10"><img src="images/promo/sticker/review-sticker-stagedoor-black.png" alt="sticker stagedoor black" width="320"/></div>
-            <div class="margin--right-one-space  margin--bottom-one-space  display--inline-block  border--1px  border--opacity-35  background--light-grey-10"><img src="images/promo/sticker/review-sticker-stagedoor-red.png" alt="sticker stagedoor red" width="320"/></div>
-            <div class="margin--right-one-space  margin--bottom-one-space  display--inline-block  border--1px  border--opacity-35  background--light-grey-10"><img src="images/promo/sticker/review-sticker-stagedoor-white.png" alt="sticker stagedoor white" width="320"/></div>
-          </div>
-          <small class="text--light-grey  text--strong"><a href="mailto:hi@stagedoorapp.com">Contact us</a> if you wish to receive Stagedoor stickers (specify the colour you wish).</small>
-        </div>
-      </section>
-
-      <section class="padding--top-six-spaces">
-        <div>
-          <h2 class="h2--giga  text--yellow" id="business-cards">3. Business Cards</h2>
-          <div class="margin--right-one-space  margin--bottom-one-space  display--inline-block  border--1px  border--opacity-35"><img src="images/promo/business-card/business-card-stagedoor.jpg" alt="business-card product stagedoor" width="1040"/></div>
-          <div>
-            <div class="margin--right-one-space  margin--bottom-one-space  display--inline-block  border--1px  border--opacity-35"><img src="images/promo/business-card/review-business-card-stagedoor-black.png" alt="business-card stagedoor black" width="320"/></div>
-            <div class="margin--right-one-space  margin--bottom-one-space  display--inline-block  border--1px  border--opacity-35"><img src="images/promo/business-card/review-business-card-stagedoor-red.png" alt="business-card stagedoor red" width="320"/></div>
-            <div class="margin--right-one-space  margin--bottom-one-space  display--inline-block  border--1px  border--opacity-35"><img src="images/promo/business-card/review-business-card-stagedoor-white.png" alt="business-card stagedoor white" width="320"/></div>
-          </div>
-          <small class="text--light-grey  text--strong"><a href="mailto:hi@stagedoorapp.com">Contact us</a> if you wish to receive Stagedoor business cards (specify the colour you wish).</small>
-        </div>
-      </section>
-
-      <section class="padding--top-six-spaces">
-        <div>
-          <h2 class="h2--giga  text--yellow" id="coasters">4. Coasters</h2>
-          <div class="margin--right-one-space  margin--bottom-one-space  display--inline-block  border--1px  border--opacity-35"><img src="images/promo/coaster/coaster-stagedoor.jpg" alt="coaster product stagedoor" width="1040"/></div>
-          <div>
-            <div class="margin--right-one-space  margin--bottom-one-space  display--inline-block  border--1px  border--opacity-35"><img src="images/promo/coaster/review-coaster-stagedoor-black.png" alt="coaster stagedoor black" width="320"/></div>
-            <div class="margin--right-one-space  margin--bottom-one-space  display--inline-block  border--1px  border--opacity-35"><img src="images/promo/coaster/review-coaster-stagedoor-red.png" alt="coaster stagedoor red" width="320"/></div>
-            <div class="margin--right-one-space  margin--bottom-one-space  display--inline-block  border--1px  border--opacity-35"><img src="images/promo/coaster/review-coaster-stagedoor-white.png" alt="coaster stagedoor white" width="320"/></div>
-          </div>
-          <small class="text--light-grey  text--strong"><a href="mailto:hi@stagedoorapp.com">Contact us</a> if you wish to receive Stagedoor coasters (specify the colour you wish).</small>
-        </div>
-      </section>
-
-      <section class="padding--top-six-spaces">
-        <div class="center-on-mobile">
-          <h2 class="h2--giga  text--yellow" id="table-talkers">5. Table talkers</h2>
-          <div class="margin--right-one-space  margin--bottom-one-space  display--inline-block  border--1px  border--opacity-35"><img src="images/promo/table-talker/table-talker-stagedoor.jpg" alt="table-talker stagedoor" width="1040"/></div>
-          <small class="text--light-grey  text--strong"><a href="mailto:hi@stagedoorapp.com">Contact us</a> if you wish to receive Stagedoor table-talkers (specify the colour you wish).</small>
-        </div>
-      </section>
-
-      <section class="padding--top-six-spaces">
-        <div class="center-on-mobile">
-          <h2 class="h2--giga  text--yellow" id="posters">6. Posters</h2>
-          <div class="padding--top-half-space">
-            <div class="margin--right-one-space  margin--bottom-one-space  display--inline-block  border--1px  border--opacity-35"><img src="images/promo/poster/review-poster-stagedoor-black.png" alt="poster stagedoor black" width="320"/></div>
-            <div class="margin--right-one-space  margin--bottom-one-space  display--inline-block  border--1px  border--opacity-35"><img src="images/promo/poster/review-poster-stagedoor-red.png" alt="poster stagedoor red" width="320"/></div>
-            <div class="margin--right-one-space  margin--bottom-one-space  display--inline-block  border--1px  border--opacity-35"><img src="images/promo/poster/review-poster-stagedoor-white.png" alt="poster stagedoor white" width="320"/></div>
-          </div>
-          <small class="text--light-grey  text--strong"><a href="mailto:hi@stagedoorapp.com">Contact us</a> if you wish to receive Stagedoor posters.</small>
         </div>
       </section>
 
