--- a/podcast.html
+++ b/podcast.html
@@ -67,6 +67,14 @@
 
     <section class="horizontal--center  padding--top-four-spaces  max-width--700  cf">
       <div class="cf  padding--top-two-spaces">
+        <img src="./images/podcast/artists/4-julie-atherton.jpg" width="300px" alt="julie atherton stagedoor podcast" class="float--left  margin--right-one-space" />
+        <h2 class="no-margin"><b><a href="https://soundcloud.com/stagedoorldn/julie-atherton" class="no-link-colour" title="Listen on Soundcloud">Ep. 4 - Julie Atherton</a></b></h2>
+        <p><iframe width="380px" height="63px" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/428063571&amp;color=ff5500&amp;inverse=false&amp;auto_play=false&amp;show_user=false"></iframe></p>
+        <p><span class="text--light-grey">Release date: 11 April 2018.</span></p>
+        <p>In the episode Kirk is joined by Julie Atherton. They discuss her first steps towards a career in theatre, the original London production of “Avenue Q” and the importance of new writing and London’s fringe.</p>
+      </div>
+
+      <div class="cf  padding--top-two-spaces">
         <img src="./images/podcast/artists/3-lara-denning.jpg" width="300px" alt="lara denning stagedoor podcast" class="float--left  margin--right-one-space" />
         <h2 class="no-margin"><b><a href="https://soundcloud.com/stagedoorldn/lara-denning" class="no-link-colour" title="Listen on Soundcloud">Ep. 3 - Lara Denning</a></b></h2>
         <p><iframe width="380px" height="63px" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/424530936&amp;color=ff5500&amp;inverse=false&amp;auto_play=false&amp;show_user=false"></iframe></p>
