changed iphone photo + small css changes

--- a/index.html
+++ b/index.html
@@ -131,9 +131,9 @@
   <div class="container  max-width--980  horizontal--center  padding--top-six-spaces  position--relative">
     <nav class="homepage--navigation">
       <a href="https://stagedoorapp.com" class="current" title="Back to Homepage">Home</a>
+      <a href="https://stagedoorapp.com/podcast" title="Ad Lib Podcast">Podcast</a>
       <a href="https://stagedoorapp.com/partners" title="Become a partner">Claim your page</a>
       <a href="https://medium.com/@stagedoor" rel="nofollow" target="_blank" title="Blog">Blog</a>
-      <a href="https://stagedoorapp.com/podcast" title="Ad Lib Podcast">Podcast</a>
       <a href="https://itunes.apple.com/us/app/stagedoor-london-theatre-app/id963068912?ls=1&mt=8" id="appstore-link" title="Download iOS app">Download <span class="hide-on-mobile"> app</span></a>
       <!-- <a href="http://stagedoorapp.com/camdenfringe" title="Official app of The Camden Fringe" class="hide-on-mobile  camden-fringe-colour">#CamdenFringe</a> -->
     </nav>
@@ -151,24 +151,18 @@
         </span>
       </div>
 
-      <div class="float--right  width--60  margin--top-three-spaces">
+      <div class="float--right  width--60  margin--top-four-spaces">
         <header class="padding--bottom-one-space  hide-on-mobile">
-          <a href="https://itunes.apple.com/us/app/stagedoor-london-theatre-app/id963068912?ls=1&mt=8" id="appstore-link" title="Download iOS app"><img src="images/apple-touch-icon.png" alt="apple icon stagedoor theatre" width="80" class="appicon  block--inline  vertical-align--middle" /></a>
-          <h2 class="block--inline  padding--left-one-space">Stagedoor</h2>
-          <a href="https://itunes.apple.com/us/app/stagedoor-london-theatre-app/id963068912?ls=1&mt=8" id="appstore-link" title="Download iOS app"><img src="images/featured-appstore.png" height="43" class="float--right  margin--top-half-space" alt="" /></a>
+          <a href="https://itunes.apple.com/us/app/stagedoor-london-theatre-app/id963068912?ls=1&mt=8" id="appstore-link" title="Download iOS app"><img src="images/apple-touch-icon.png" alt="apple icon stagedoor theatre" width="92" class="block--inline  vertical-align--middle" /></a>
+          <h2 class="block--inline  padding--left-one-space  vertical-align--middle  h2--giga">Stagedoor</h2>
         </header>
 
-        <h1 class="padding--top-bottom-one-space">The must-have <strong>app for the London theatre</strong> lover.</h1>
+        <h1 class="padding--top-two-spaces">The must-have <strong>app for the London theatre</strong> lover.</h1>
         <h2 class="center-on-mobile">Stay up-to-date with what&rsquo;s on, where it&rsquo;s on, and who&rsquo;s in it. Discover, save, and rate your favourite London theatre shows and creatives.</h2>
         <p class="text--bigger  margin--top-two-spaces">
           <a href="https://itunes.apple.com/us/app/stagedoor-london-theatre-app/id963068912?ls=1&mt=8" id="appstore-link" class="button  button--download  no-link-colour" title="Download now for iOS">Download on your iPhone</a>
         </p>
         <small class="opacity--50  padding--top-half-space  center-on-mobile">Currently only for iPhones. <a href="https://twitter.com/share?text=@stagedoorLDN: I would certainly enjoy the Android version of your mobile app!" target="_blank" rel="nofollow">Want it for Android?</a></small>
-
-        <p class="margin--top-two-spaces  opacity--50">
-          <small class="text--section">Official partner with</small>
-          <img src="images/theatres.png" alt=""  height="45" />
-        </p>
       </div>
     </section>
 
