promo page added badges

--- a/promo.html
+++ b/promo.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" type="text/css" href="styles/style.min.css" />
   <link rel="canonical" href="https://stagedoorapp.com/promo" />
 
-   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+  <meta http-equiv="content-type" content="text/html; charset=utf-8" />
   <meta name="author" content="https://plus.google.com/+Stagedoorapp" />
   <meta name="description" content="Promotional material for Stagedoor. Buttons, stickers, email and social banners, table talkers, beer mats, and more." />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -32,7 +32,7 @@
 </head>
 <body>
   <!-- Google Tag Manager -->
-  <noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-MQWRJJ"
+  <!--noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-MQWRJJ"
   height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
   new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
@@ -107,7 +107,7 @@
 
       <section class="padding--top-six-spaces">
         <div class="center-on-mobile">
-          <h2 class="h2--giga  text--yellow" id="table-talkers">5. Table talkers</h2>
+          <h2 class="h2--giga  text--yellow" id="table-talkers">5. Table Talkers</h2>
           <div class="margin--right-one-space  margin--bottom-one-space  display--inline-block  border--1px  border--opacity-35"><img src="images/promo/table-talker/table-talker-stagedoor.jpg" alt="table-talker stagedoor" width="1040"/></div>
           <small class="text--light-grey  text--strong"><a href="mailto:hi@stagedoorapp.com">Contact us</a> if you wish to receive Stagedoor table-talkers (specify the colour you wish).</small>
         </div>
@@ -116,6 +116,20 @@
       <section class="padding--top-six-spaces">
         <h2 class="h2--giga  text--yellow" id="banners">6. Banners</h2>
         <div class="padding--top-two-spaces  center-on-mobile">
+          <h2 id="badges" class="text--strong">Badges</h2>
+          <div class="padding--top-half-space  less-opacity-on-hover">
+            <a href="images/promo/banner/review-stagedoor-hori-redwhite.png" class="margin--right-one-space  margin--bottom-one-space  display--inline-block  border--1px  border--opacity-35" download><img src="images/promo/banner/review-stagedoor-hori-redwhite.png" alt="badges banner stagedoor redwhite" width="230"/></a>
+            <a href="images/promo/banner/review-stagedoor-hori-white.png" class="margin--right-one-space  margin--bottom-one-space  display--inline-block  border--1px  border--opacity-35" download><img src="images/promo/banner/review-stagedoor-hori-white.png" alt="badges banner stagedoor white" width="230"/></a>
+            <a href="images/promo/banner/review-stagedoor-hori-redblack.png" class="margin--right-one-space  margin--bottom-one-space  display--inline-block  border--1px  border--opacity-35  background--light-grey-10" download><img src="images/promo/banner/review-stagedoor-hori-redblack.png" alt="badges banner stagedoor redblack" width="230"/></a>
+            <a href="images/promo/banner/review-stagedoor-hori-black.png" class="margin--right-one-space  margin--bottom-one-space  display--inline-block  border--1px  border--opacity-35  background--light-grey-10" download><img src="images/promo/banner/review-stagedoor-hori-black.png" alt="badges banner stagedoor black" width="230"/></a>
+            <a href="images/promo/banner/review-stagedoor-vert-redwhite.png" class="margin--right-one-space  margin--bottom-one-space  display--inline-block  border--1px  border--opacity-35" download><img src="images/promo/banner/review-stagedoor-vert-redwhite.png" alt="badges banner stagedoor redwhite" width="230"/></a>
+            <a href="images/promo/banner/review-stagedoor-vert-white.png" class="margin--right-one-space  margin--bottom-one-space  display--inline-block  border--1px  border--opacity-35" download><img src="images/promo/banner/review-stagedoor-vert-white.png" alt="badges banner stagedoor white" width="230"/></a>
+            <a href="images/promo/banner/review-stagedoor-vert-redblack.png" class="margin--right-one-space  margin--bottom-one-space  display--inline-block  border--1px  border--opacity-35  background--light-grey-10" download><img src="images/promo/banner/review-stagedoor-vert-redblack.png" alt="badges banner stagedoor redblack" width="230"/></a>
+            <a href="images/promo/banner/review-stagedoor-vert-black.png" class="margin--right-one-space  margin--bottom-one-space  display--inline-block  border--1px  border--opacity-35  background--light-grey-10" download><img src="images/promo/banner/review-stagedoor-vert-black.png" alt="badges banner stagedoor black" width="230"/></a>
+          </div>
+          <small class="text--light-grey  text--strong">Click on the desired image to download full size (various sizes PNG, RGB).</small>
+        </div>
+        <div class="padding--top-four-spaces  center-on-mobile">
           <h2 id="email" class="text--strong">Email</h2>
           <div class="padding--top-half-space  less-opacity-on-hover">
             <a href="images/promo/banner/follow-email-stagedoor-black.png" class="margin--right-one-space  margin--bottom-one-space  display--inline-block  border--1px  border--opacity-35" download><img src="images/promo/banner/follow-email-stagedoor-black.png" alt="facebook banner stagedoor black" width="320"/></a>
